chore: fix alignment when using mdi icons + text in slick-cell

--- a/packages/common/src/styles/_variables.scss
+++ b/packages/common/src/styles/_variables.scss
@@ -93,6 +93,7 @@ $slick-cell-odd-active-background-color:                    darken($slick-grid-c
 $slick-cell-padding-top-bottom:                             5px !default;
 $slick-cell-padding-left-right:                             6px !default;
 $slick-cell-padding:                                        $slick-cell-padding-top-bottom $slick-cell-padding-left-right !default;
+$slick-icon-with-text-valign:                               middle !default;
 
 /** 4x available slick-pane (top, bottom, left, right) */
 $slick-pane-top-border-top:                                 none !default;
